# pdl

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  docker-compose.db.yml  vcpkg.json
docs/: AST.md  ROADMAP.md  STATE1.md  WORKFLOW.md  configuration.md  db2dpl-config.md  full-demo-notes.md  org-db2dpl-config.md  usage.md
pdl/: build.sh  go.mod  go.sum  pdl
pdl/cmd/pdl/: init_prompt.go  main.go
pdl/pdl-orm/: go.mod
pdl/pdlc/: CMakeLists.txt  README.md  build.sh  example1.pdl
pdl/pdlc/src/: annotation.h  ast.cpp  ast.h  astJsonWriter.cpp  astJsonWriter.h  codeChecker.cpp  codeChecker.h  commonHeaders.hpp  languageCommon.h  parser.cpp  parser.h  parserErrorHandler.h  pdlConfig.cpp  pdlConfig.h  pdlc2.cpp  skipper.h  symbolTable.cpp  symbolTable.h  symbols.cpp  symbols.h
pdlc/: CMakeLists.txt  ReadMe.txt  annotation.h  ast.cpp  ast.h  codeChecker.cpp  codeChecker.h  languageCommon.h  packages.config  parser.h  parserErrorHandler.h  pdlConfig.cpp  pdlConfig.h  pdlc2.cpp  pdlc2.vcxproj  pdlc2.vcxproj.filters  skipper.h  stdafx.cpp  stdafx.h  symbolTable.cpp  symbolTable.h  symbols.cpp  symbols.h
pdlc/generators/: CppGenerator.cpp  CppGenerator.h  as3Generator.cpp  as3Generator.h  csharpGenerator.cpp  csharpGenerator.h  generator.cpp  generator.h  goGenerator.cpp  goGenerator.h  javaGenerator.cpp  javaGenerator.h  jsGenerator.cpp  jsGenerator.h  phpGenerator.cpp  phpGenerator.h
pdlc/templates/: classTemplate1.as  classTemplate1.cs  classTemplate1.js
sample-project/: manjar-schema-postgres.sql  manjar-schema.sql
sample-project/go/: .env.test  category_product_row_test.go  generated_api_test.go  generated_typecheck_test.go  go.mod  main_test.go  pdl_compile_test.go
sample-project/pdl-project/: .env.local  .env.pg.local  .env.sample  .gitignore  gulpfile.js  package-lock.json  package.json  pdl.config.js  pdl.config.json  pdl.config.json-org  pdl.db2pdl.config.json  webpack.config.js
(+541 files in other folders)
